--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-# FastAPI Backend Dependencies with Database Support
-fastapi>=0.104.1
-uvicorn[standard]>=0.24.0
-pydantic>=2.8.0
-python-multipart>=0.0.6
-
-# Database
-asyncpg>=0.29.0
-sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.0
-
-# Utilities
-python-dotenv>=1.0.0
-requests>=2.31.0
-beautifulsoup4>=4.12.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+asyncpg==0.29.0
+python-multipart==0.0.6
+python-dotenv==1.0.0
+scrapy==2.11.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+selenium==4.15.2
+webdriver-manager==4.0.1
+pydantic==2.5.0
+httpx==0.25.2
+aiofiles==23.2.1
