Deploy Railway API with 174 LaserMatch records and update frontend configuration
- Deployed API server to Railway at https://laser-api-production.up.railway.app
- Deployed worker service for periodic data refresh
- Updated frontend .env.local to use Railway API URL
- Added detailed logging to debug API connection issues
- All 174 LaserMatch records now available via Railway API
- Database-driven architecture with PostgreSQL on Railway

--- a/web/.env.production
+++ b/web/.env.production
@@ -1,2 +1,1 @@
-# Railway API URL - Replace with your actual Railway URL
-NEXT_PUBLIC_API_URL=https://your-railway-api-url.railway.app
+NEXT_PUBLIC_API_URL=https://laser-api-production.up.railway.app
